# IdleMatrix

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
.cache/clangd/index/: main.cpp.D8E31EBCFB61B7FD.idx
backend/include/: datastructures.hpp  gamestate.hpp
backend/src/: CMakeLists.txt  gamestate.cpp
fonts/: CMakeLists.txt  fontmanager.cpp  fontmanager.hpp
frontend/include/: increment_animations.hpp  increment_animator.hpp  main_window.hpp  upgradebuttonwidget.hpp
frontend/src/: CMakeLists.txt  increment_animations.cpp  increment_animator.cpp  main_window.cpp  upgradebuttonwidget.cpp
game_loop/include/: gameloop.hpp
game_loop/src/: CMakeLists.txt  gameloop.cpp
